Trainer function has most params moved to model config, finished dataset with weights rework.

--- a/notebooks/design_net.ipynb
+++ b/notebooks/design_net.ipynb
@@ -11,31 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['.git',\n",
-       " '.gitignore',\n",
-       " '.idea',\n",
-       " 'configs',\n",
-       " 'data',\n",
-       " 'info_nas',\n",
-       " 'info_nas.egg-info',\n",
-       " 'LICENSE',\n",
-       " 'notebooks',\n",
-       " 'README.md',\n",
-       " 'scripts',\n",
-       " 'setup.py']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -44,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +34,7 @@
       "Instructions for updating:\n",
       "Use eager execution and: \n",
       "`tf.data.TFRecordDataset(path)`\n",
-      "Loaded dataset in 34 seconds\n"
+      "Loaded dataset in 33 seconds\n"
      ]
     }
    ],
@@ -69,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,21 +70,7 @@
     "device = torch.device('cuda')\n",
     "\n",
     "# device = None otherwise the dataset is save to the cuda as a whole\n",
-    "labeled, unlabeled = get_labeled_unlabeled_datasets(nb, device=device,\n",
-    "                                                    seed=seed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(len(labeled['valid_io']['inputs'])):\n",
-    "    if i not in labeled['valid_io']['inputs']:\n",
-    "        raise ValueError()\n",
-    "        \n",
-    "    assert (sum(labeled['train_io']['inputs'] == i)) == 4"
+    "labeled, unlabeled = get_labeled_unlabeled_datasets(nb, device=device, seed=seed)"
    ]
   },
   {
@@ -118,22 +82,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['train_io', 'train_net', 'valid_io', 'valid_net'])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "labeled.keys()"
+    "for i in range(len(labeled['valid_io']['inputs'])):\n",
+    "    if i not in labeled['valid_io']['inputs']:\n",
+    "        raise ValueError()\n",
+    "        \n",
+    "    assert (sum(labeled['train_io']['inputs'] == i)) == 4"
    ]
   },
   {
@@ -408,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,26 +377,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "torch.Size([1000, 3, 32, 32])\n",
       "torch.Size([4000])\n",
       "torch.Size([4000, 512, 8, 8])\n"
      ]
     }
    ],
    "source": [
-    "print(labeled['train_io']['inputs'].shape)\n",
-    "print(labeled['train_io']['outputs'].shape)"
+    "print(labeled['train']['dataset'].shape)\n",
+    "print(labeled['train']['inputs'].shape)\n",
+    "print(labeled['train']['outputs'].shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -543,20 +502,84 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/media/win_hdd/Gabi/Code/mff/ML/DP/code/info-nas/info_nas/datasets/io/semi_dataset.py:91: UserWarning: The number of labeled nets is less than the batch size (4 vs 32).\n",
+      "/media/win_hdd/Gabi/Code/mff/ML/DP/code/info-nas/info_nas/datasets/io/semi_dataset.py:140: UserWarning: The number of labeled nets is less than the batch size (4 vs 32).\n",
       "  warnings.warn(f\"The number of labeled nets is less than the batch size ({n_labeled_orig} vs {batch_size}).\")\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'shape'",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 0: batch 0 / 12040: \n",
+      "\t labeled: total: 3.5410568714141846, unlabeled: 3.342668056488037, labeled: 0.19838890433311462\n",
+      "\t unlabeled: \n",
+      "\t reference: total: 3.843514919281006, unlabeled: 3.843514919281006\n",
+      "\t labeled batches: 1, unlabeled batches: 0\n",
+      "epoch 0: batch 1000 / 12040: \n",
+      "\t labeled: total: 1.142551836490631, unlabeled: 0.9324217414855958, labeled: 0.21013009786605835\n",
+      "\t unlabeled: total: 0.7051143738777126, unlabeled: 0.7051143738777126\n",
+      "\t reference: total: 0.726556360602498, unlabeled: 0.726556360602498\n",
+      "\t labeled batches: 125, unlabeled batches: 876\n",
+      "epoch 0: batch 2000 / 12040: \n",
+      "\t labeled: total: 1.142551836490631, unlabeled: 0.9324217414855958, labeled: 0.21013009786605835\n",
+      "\t unlabeled: total: 0.5890314610146764, unlabeled: 0.5890314610146764\n",
+      "\t reference: total: 0.6016492928968913, unlabeled: 0.6016492928968913\n",
+      "\t labeled batches: 125, unlabeled batches: 1876\n",
+      "epoch 0: batch 3000 / 12040: \n",
+      "\t labeled: total: 1.142551836490631, unlabeled: 0.9324217414855958, labeled: 0.21013009786605835\n",
+      "\t unlabeled: total: 0.5237413620335336, unlabeled: 0.5237413620335336\n",
+      "\t reference: total: 0.5347445492583964, unlabeled: 0.5347445492583964\n",
+      "\t labeled batches: 125, unlabeled batches: 2876\n",
+      "epoch 0: batch 4000 / 12040: \n",
+      "\t labeled: total: 1.142551836490631, unlabeled: 0.9324217414855958, labeled: 0.21013009786605835\n",
+      "\t unlabeled: total: 0.4793896821430347, unlabeled: 0.4793896821430347\n",
+      "\t reference: total: 0.4919922720921156, unlabeled: 0.4919922720921156\n",
+      "\t labeled batches: 125, unlabeled batches: 3876\n",
+      "epoch 0: batch 5000 / 12040: \n",
+      "\t labeled: total: 1.142551836490631, unlabeled: 0.9324217414855958, labeled: 0.21013009786605835\n",
+      "\t unlabeled: total: 0.4469192935745182, unlabeled: 0.4469192935745182\n",
+      "\t reference: total: 0.4614660400696884, unlabeled: 0.4614660400696884\n",
+      "\t labeled batches: 125, unlabeled batches: 4876\n",
+      "epoch 0: batch 6000 / 12040: \n",
+      "\t labeled: total: 1.142551836490631, unlabeled: 0.9324217414855958, labeled: 0.21013009786605835\n",
+      "\t unlabeled: total: 0.42198479142600454, unlabeled: 0.42198479142600454\n",
+      "\t reference: total: 0.43695876422454427, unlabeled: 0.43695876422454427\n",
+      "\t labeled batches: 125, unlabeled batches: 5876\n",
+      "epoch 0: batch 7000 / 12040: \n",
+      "\t labeled: total: 1.142551836490631, unlabeled: 0.9324217414855958, labeled: 0.21013009786605835\n",
+      "\t unlabeled: total: 0.40205205754832585, unlabeled: 0.40205205754832585\n",
+      "\t reference: total: 0.41712883790379474, unlabeled: 0.41712883790379474\n",
+      "\t labeled batches: 125, unlabeled batches: 6876\n",
+      "epoch 0: batch 8000 / 12040: \n",
+      "\t labeled: total: 1.142551836490631, unlabeled: 0.9324217414855958, labeled: 0.21013009786605835\n",
+      "\t unlabeled: total: 0.38573774319272647, unlabeled: 0.38573774319272647\n",
+      "\t reference: total: 0.40085014435309585, unlabeled: 0.40085014435309585\n",
+      "\t labeled batches: 125, unlabeled batches: 7876\n",
+      "epoch 0: batch 9000 / 12040: \n",
+      "\t labeled: total: 1.142551836490631, unlabeled: 0.9324217414855958, labeled: 0.21013009786605835\n",
+      "\t unlabeled: total: 0.3722866108996098, unlabeled: 0.3722866108996098\n",
+      "\t reference: total: 0.38722586008644466, unlabeled: 0.38722586008644466\n",
+      "\t labeled batches: 125, unlabeled batches: 8876\n",
+      "epoch 0: batch 10000 / 12040: \n",
+      "\t labeled: total: 1.142551836490631, unlabeled: 0.9324217414855958, labeled: 0.21013009786605835\n",
+      "\t unlabeled: total: 0.36096264840035414, unlabeled: 0.36096264840035414\n",
+      "\t reference: total: 0.3755812986354663, unlabeled: 0.3755812986354663\n",
+      "\t labeled batches: 125, unlabeled batches: 9876\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-9f40073cb7ff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mdevice\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m model = train(labeled, unlabeled, nb, checkpoint_path='.', device=device,\n\u001b[0m\u001b[1;32m     11\u001b[0m               n_workers=4, n_val_workers=4, k=100, use_reference_model=True)\n",
-      "\u001b[0;32m/media/win_hdd/Gabi/Code/mff/ML/DP/code/info-nas/info_nas/trainer.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(labeled, unlabeled, nasbench, checkpoint_path, use_reference_model, model_config, device, batch_size, k, n_workers, n_val_workers, seed, epochs, config, print_frequency, torch_deterministic, cudnn_deterministic, writer, verbose)\u001b[0m\n\u001b[1;32m    217\u001b[0m         \u001b[0min_channels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlabeled\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'train_io'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'inputs'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    218\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 219\u001b[0;31m         \u001b[0min_channels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlabeled\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'train_io'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dataset'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    220\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    221\u001b[0m     \u001b[0mout_channels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlabeled\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'train_io'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'outputs'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'shape'"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-22b5970759c7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mdevice\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m model = train(labeled, unlabeled, nb, checkpoint_path='.', device=device,\n\u001b[0m\u001b[1;32m     11\u001b[0m               use_reference_model=True, batch_len_labeled=7)\n",
+      "\u001b[0;32m/media/win_hdd/Gabi/Code/mff/ML/DP/code/info-nas/info_nas/trainer.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(labeled, unlabeled, nasbench, checkpoint_path, use_reference_model, model_config, device, batch_size, seed, epochs, writer, verbose, print_frequency, batch_len_labeled, torch_deterministic, cudnn_deterministic)\u001b[0m\n\u001b[1;32m    289\u001b[0m                             loss_list, Z_list, eval_labeled=is_labeled)\n\u001b[1;32m    290\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0muse_reference_model\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 291\u001b[0;31m                 _train_on_batch(model_ref, batch, optimizer_ref, device, config, loss_func_vae, loss_func_labeled,\n\u001b[0m\u001b[1;32m    292\u001b[0m                                 loss_lists_epoch['reference'], Z['reference'], eval_labeled=False)\n\u001b[1;32m    293\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/media/win_hdd/Gabi/Code/mff/ML/DP/code/info-nas/info_nas/trainer.py\u001b[0m in \u001b[0;36m_train_on_batch\u001b[0;34m(model, batch, optimizer, device, config, loss_func_vae, loss_func_labeled, loss_list, Z, eval_labeled)\u001b[0m\n\u001b[1;32m    167\u001b[0m                            loss_list, outputs=outputs)\n\u001b[1;32m    168\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 169\u001b[0;31m     \u001b[0mloss_out\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    170\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    171\u001b[0m     \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclip_grad_norm_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/pyt/lib/python3.8/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    243\u001b[0m                 \u001b[0mcreate_graph\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    244\u001b[0m                 inputs=inputs)\n\u001b[0;32m--> 245\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    246\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    247\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/pyt/lib/python3.8/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    143\u001b[0m         \u001b[0mretain_graph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    144\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 145\u001b[0;31m     Variable._execution_engine.run_backward(\n\u001b[0m\u001b[1;32m    146\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    147\u001b[0m         allow_unreachable=True, accumulate_grad=True)  # allow_unreachable flag\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -571,27 +594,7 @@
     "    device = None\n",
     "    \n",
     "model = train(labeled, unlabeled, nb, checkpoint_path='.', device=device,\n",
-    "              n_workers=4, n_val_workers=4, k=100, use_reference_model=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "32"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(labeled['train_io']['dataset'])"
+    "              use_reference_model=True, batch_len_labeled=7)"
    ]
   },
   {
