--- a/notebooks/heatmaps/heatmaps_func.ipynb
+++ b/notebooks/heatmaps/heatmaps_func.ipynb
@@ -218,6 +218,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading dataset from file... This may take a few minutes...\n",
+      "Loaded dataset in 34 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "seed = 1\n",
+    "\n",
+    "from nasbench import api\n",
+    "\n",
+    "nasbench_path = '../../data/nasbench_only108.tfrecord'\n",
+    "nb = api.NASBench(nasbench_path)\n",
+    "\n",
+    "import torch\n",
+    "from info_nas.datasets.io.create_dataset import load_io_dataset\n",
+    "\n",
+    "#torch.backends.cudnn.benchmark = True\n",
+    "device = torch.device('cuda')\n",
+    "\n",
+    "dataset = load_io_dataset('../../data/train_long.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('tmpnb.pickle', 'wb') as f:\n",
+    "    pickle.dump(nb, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., ..., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "onp = dataset['outputs'].numpy()\n",
+    "np.hstack([onp, np.ones((len(onp),1))])[:,-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1625752350.60378"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "datetime.datetime.now().timestamp()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
