Commit everything so that I can refactor it later.

--- a/notebooks/design_regressors.ipynb
+++ b/notebooks/design_regressors.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_name = '/home/gabi/diplomka/results/with_ref_5/2021-20-07_23-26-03/final_250_results/'"
+    "dir_name = '/home/gabi/diplomka/neurips/paper/regressors/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -19,19 +19,162 @@
     {
      "data": {
       "text/plain": [
-       "['gb_250_10_features_model_orig_epoch-29.pt',\n",
-       " 'gb_250_10_features_model_ref_epoch-29.pt',\n",
-       " 'gb_250_1_features_model_orig_epoch-29.pt',\n",
-       " 'gb_250_1_features_model_ref_epoch-29.pt',\n",
-       " 'gb_250_2_features_model_orig_epoch-29.pt',\n",
-       " 'gb_250_2_features_model_ref_epoch-29.pt',\n",
-       " 'gb_250_3_features_model_orig_epoch-29.pt',\n",
-       " 'gb_250_3_features_model_ref_epoch-29.pt',\n",
-       " 'gb_250_4_features_model_orig_epoch-29.pt',\n",
-       " 'gb_250_4_features_model_ref_epoch-29.pt']"
+       "['initial_tests',\n",
+       " 'rf_10000_0_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_10000_0_features_model_orig_epoch-29.pt',\n",
+       " 'rf_10000_0_features_model_ref_epoch-29.pt',\n",
+       " 'rf_10000_1_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_10000_1_features_model_orig_epoch-29.pt',\n",
+       " 'rf_10000_1_features_model_ref_epoch-29.pt',\n",
+       " 'rf_10000_2_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_10000_2_features_model_orig_epoch-29.pt',\n",
+       " 'rf_10000_2_features_model_ref_epoch-29.pt',\n",
+       " 'rf_10000_3_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_100_4_features_model_orig_epoch-29.pt',\n",
+       " 'rf_100_4_features_model_ref_epoch-29.pt',\n",
+       " 'rf_100_5_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_100_5_features_model_orig_epoch-29.pt',\n",
+       " 'rf_100_5_features_model_ref_epoch-29.pt',\n",
+       " 'rf_100_6_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_100_6_features_model_orig_epoch-29.pt',\n",
+       " 'rf_100_6_features_model_ref_epoch-29.pt',\n",
+       " 'rf_100_7_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_100_7_features_model_orig_epoch-29.pt',\n",
+       " 'rf_100_7_features_model_ref_epoch-29.pt',\n",
+       " 'rf_100_8_features_model_orig_epoch-29.pt',\n",
+       " 'rf_100_8_features_model_ref_epoch-29.pt',\n",
+       " 'rf_100_9_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_100_9_features_model_orig_epoch-29.pt',\n",
+       " 'rf_100_9_features_model_ref_epoch-29.pt',\n",
+       " 'rf_250_0_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_250_0_features_model_orig_epoch-29.pt',\n",
+       " 'rf_250_0_features_model_ref_epoch-29.pt',\n",
+       " 'rf_250_1_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_250_1_features_model_orig_epoch-29.pt',\n",
+       " 'rf_250_1_features_model_ref_epoch-29.pt',\n",
+       " 'rf_10000_3_features_model_orig_epoch-29.pt',\n",
+       " 'rf_10000_8_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_1000_3_features_model_orig_epoch-29.pt',\n",
+       " 'rf_100_0_features_model_orig_epoch-29.pt',\n",
+       " 'rf_100_4_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_100_8_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_250_2_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_250_6_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_600_0_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_600_4_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_250_2_features_model_orig_epoch-29.pt',\n",
+       " 'rf_250_2_features_model_ref_epoch-29.pt',\n",
+       " 'rf_250_3_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_250_3_features_model_orig_epoch-29.pt',\n",
+       " 'rf_250_3_features_model_ref_epoch-29.pt',\n",
+       " 'rf_250_4_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_250_4_features_model_orig_epoch-29.pt',\n",
+       " 'rf_250_4_features_model_ref_epoch-29.pt',\n",
+       " 'rf_250_5_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_250_5_features_model_orig_epoch-29.pt',\n",
+       " 'rf_250_5_features_model_ref_epoch-29.pt',\n",
+       " 'rf_250_6_features_model_orig_epoch-29.pt',\n",
+       " 'rf_250_6_features_model_ref_epoch-29.pt',\n",
+       " 'rf_250_7_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_250_7_features_model_orig_epoch-29.pt',\n",
+       " 'rf_250_7_features_model_ref_epoch-29.pt',\n",
+       " 'rf_250_8_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_250_8_features_model_orig_epoch-29.pt',\n",
+       " 'rf_250_8_features_model_ref_epoch-29.pt',\n",
+       " 'rf_250_9_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_250_9_features_model_orig_epoch-29.pt',\n",
+       " 'rf_250_9_features_model_ref_epoch-29.pt',\n",
+       " 'rf_600_0_features_model_orig_epoch-29.pt',\n",
+       " 'rf_600_0_features_model_ref_epoch-29.pt',\n",
+       " 'rf_600_1_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_600_1_features_model_orig_epoch-29.pt',\n",
+       " 'rf_600_1_features_model_ref_epoch-29.pt',\n",
+       " 'rf_600_2_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_600_2_features_model_orig_epoch-29.pt',\n",
+       " 'rf_600_2_features_model_ref_epoch-29.pt',\n",
+       " 'rf_600_3_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_600_3_features_model_orig_epoch-29.pt',\n",
+       " 'rf_600_3_features_model_ref_epoch-29.pt',\n",
+       " 'rf_600_4_features_model_orig_epoch-29.pt',\n",
+       " 'rf_600_4_features_model_ref_epoch-29.pt',\n",
+       " 'rf_600_5_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_600_5_features_model_orig_epoch-29.pt',\n",
+       " 'rf_600_5_features_model_ref_epoch-29.pt',\n",
+       " 'rf_600_6_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_600_6_features_model_orig_epoch-29.pt',\n",
+       " 'rf_600_6_features_model_ref_epoch-29.pt',\n",
+       " 'rf_600_7_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_600_7_features_model_orig_epoch-29.pt',\n",
+       " 'rf_600_7_features_model_ref_epoch-29.pt',\n",
+       " 'rf_600_8_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_600_8_features_model_orig_epoch-29.pt',\n",
+       " 'rf_600_8_features_model_ref_epoch-29.pt',\n",
+       " 'rf_600_9_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_600_9_features_model_orig_epoch-29.pt',\n",
+       " 'rf_600_9_features_model_ref_epoch-29.pt',\n",
+       " 'rf_tune_10000_4_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_tune_10000_4_features_model_orig_epoch-29.pt',\n",
+       " 'rf_100_0_features_model_ref_epoch-29.pt',\n",
+       " 'rf_100_1_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_100_1_features_model_orig_epoch-29.pt',\n",
+       " 'rf_100_1_features_model_ref_epoch-29.pt',\n",
+       " 'rf_100_2_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_100_2_features_model_orig_epoch-29.pt',\n",
+       " 'rf_100_2_features_model_ref_epoch-29.pt',\n",
+       " 'rf_100_3_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_100_3_features_model_orig_epoch-29.pt',\n",
+       " 'rf_100_3_features_model_ref_epoch-29.pt',\n",
+       " 'rf_1000_3_features_model_ref_epoch-29.pt',\n",
+       " 'rf_1000_4_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_1000_4_features_model_orig_epoch-29.pt',\n",
+       " 'rf_1000_4_features_model_ref_epoch-29.pt',\n",
+       " 'rf_1000_5_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_1000_5_features_model_orig_epoch-29.pt',\n",
+       " 'rf_1000_5_features_model_ref_epoch-29.pt',\n",
+       " 'rf_1000_6_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_1000_6_features_model_orig_epoch-29.pt',\n",
+       " 'rf_1000_6_features_model_ref_epoch-29.pt',\n",
+       " 'rf_1000_7_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_1000_7_features_model_orig_epoch-29.pt',\n",
+       " 'rf_1000_7_features_model_ref_epoch-29.pt',\n",
+       " 'rf_1000_8_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_1000_8_features_model_orig_epoch-29.pt',\n",
+       " 'rf_1000_8_features_model_ref_epoch-29.pt',\n",
+       " 'rf_1000_9_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_1000_9_features_model_orig_epoch-29.pt',\n",
+       " 'rf_1000_9_features_model_ref_epoch-29.pt',\n",
+       " 'rf_100_0_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_10000_3_features_model_ref_epoch-29.pt',\n",
+       " 'rf_10000_4_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_10000_4_features_model_orig_epoch-29.pt',\n",
+       " 'rf_10000_4_features_model_ref_epoch-29.pt',\n",
+       " 'rf_10000_5_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_10000_5_features_model_orig_epoch-29.pt',\n",
+       " 'rf_10000_5_features_model_ref_epoch-29.pt',\n",
+       " 'rf_10000_6_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_10000_6_features_model_orig_epoch-29.pt',\n",
+       " 'rf_10000_6_features_model_ref_epoch-29.pt',\n",
+       " 'rf_10000_7_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_10000_7_features_model_orig_epoch-29.pt',\n",
+       " 'rf_10000_7_features_model_ref_epoch-29.pt',\n",
+       " 'rf_10000_8_features_model_orig_epoch-29.pt',\n",
+       " 'rf_10000_8_features_model_ref_epoch-29.pt',\n",
+       " 'rf_10000_9_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_10000_9_features_model_orig_epoch-29.pt',\n",
+       " 'rf_10000_9_features_model_ref_epoch-29.pt',\n",
+       " 'rf_1000_0_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_1000_0_features_model_orig_epoch-29.pt',\n",
+       " 'rf_1000_0_features_model_ref_epoch-29.pt',\n",
+       " 'rf_1000_1_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_1000_1_features_model_orig_epoch-29.pt',\n",
+       " 'rf_1000_1_features_model_ref_epoch-29.pt',\n",
+       " 'rf_1000_2_features-original_training_arch2vec_epochs-8.pt',\n",
+       " 'rf_1000_2_features_model_orig_epoch-29.pt',\n",
+       " 'rf_1000_2_features_model_ref_epoch-29.pt',\n",
+       " 'rf_1000_3_features-original_training_arch2vec_epochs-8.pt']"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +182,7 @@
    "source": [
     "import os\n",
     "\n",
-    "os.listdir(dir_name)[:10]"
+    "os.listdir(dir_name)"
    ]
   },
   {
