Rmd of notebooks, some comments also

--- a/notebooks/heatmaps/long_heatmaps.ipynb
+++ b/notebooks/heatmaps/long_heatmaps.ipynb
@@ -4,9 +4,27 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.set_autosave_interval(0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autosave disabled\n"
+     ]
+    }
+   ],
    "source": [
-    "seed= 1"
+    "%autosave 0\n",
+    "seed = 1"
    ]
   },
   {
@@ -373,12 +391,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# compare end"
+    "## Heatmap and stats"
    ]
   },
   {
@@ -600,6 +616,13 @@
     "plt.savefig(f\"heatmap_all-nets_all-data_label-{label}.png\")\n",
     "plt.show()\n",
     "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Error analysis (mean vector)"
    ]
   },
   {
@@ -1832,9 +1855,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyt_conda",
+   "display_name": "bioinf",
    "language": "python",
-   "name": "pyt_conda"
+   "name": "bioinf"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1846,7 +1869,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
