The rest of notebooks to Rmd.

--- a/notebooks/output_processing/process_reinforce_results.ipynb
+++ b/notebooks/output_processing/process_reinforce_results.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%autosave 0\n",
     "import os\n",
     "\n",
     "runs_dir = '/home/gabi/diplomka/results/with_ref_5/2021-20-07_23-26-03/reinforce-runs'"
