--- a/notebooks/output_processing/Final_heatmaps.ipynb
+++ b/notebooks/output_processing/Final_heatmaps.ipynb
@@ -2,6 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.set_autosave_interval(0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autosave disabled\n"
+     ]
+    }
+   ],
+   "source": [
+    "%autosave 0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 237,
    "metadata": {},
    "outputs": [
@@ -11155,9 +11181,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyt_conda",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pyt_conda"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -11169,7 +11195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
